--- a/package.json
+++ b/package.json
@@ -11,11 +11,24 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.28.5",
+        "@babel/preset-env": "^7.28.5",
+        "@babel/preset-react": "^7.28.5",
+        "@babel/preset-typescript": "^7.28.5",
+        "@types/react": "^19.2.2",
+        "@types/react-dom": "^19.2.2",
+        "babel-loader": "^10.0.0",
+        "css-loader": "^7.1.2",
+        "style-loader": "^4.0.0",
         "ts-loader": "^9.5.4",
         "typescript": "^5.9.3",
         "webpack": "^5.102.1",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^5.2.2"
     },
-    "type": "commonjs"
+    "type": "commonjs",
+    "dependencies": {
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0"
+    }
 }
