--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "scripts": {
         "start": "webpack serve",
-        "build": "webpack"
+        "build": "webpack",
+        "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+        "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\""
     },
     "keywords": [],
     "author": "",
@@ -19,6 +21,7 @@
         "@types/react-dom": "^19.2.2",
         "babel-loader": "^10.0.0",
         "css-loader": "^7.1.2",
+        "prettier": "^3.6.2",
         "style-loader": "^4.0.0",
         "ts-loader": "^9.5.4",
         "typescript": "^5.9.3",
