--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "type": "commonjs",
     "dependencies": {
+        "clsx": "^2.1.1",
         "react": "^19.2.0",
         "react-dom": "^19.2.0"
     }
